benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-mix028_power.oepc_pso.oepc_rmo.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix028_power.oepc_pso.oepc_rmo.oepc.yml/mix028_power.oepc_pso.oepc_rmo.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix028_power.oepc_pso.oepc_rmo.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_izdobg5w/tmp/tmpl58ljy95.c
Compilation started
/tmp/BenchExec_run_izdobg5w/tmp/tmpl58ljy95.c: In function ‘P2’:
/tmp/BenchExec_run_izdobg5w/tmp/tmpl58ljy95.c:624:19: error: ‘FALSE’ undeclared (first use in this function)
  624 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_izdobg5w/tmp/tmpl58ljy95.c:624:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
